# agent

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: develop.yml  master-apple.yml  master-linux.yml  release-agent.yml  release-setup.yml  release.yml
agent/: Cargo.toml
agent/src/: address.rs  agent.rs  config.rs  connection.rs  dns_pattern.rs  error.rs  lib.rs  main.rs  setup.rs  stream.rs  tls.rs
changelog/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.3.0.md
docker/: run-agent.sh
protocol/: Cargo.toml
protocol/src/: agentid.rs  lib.rs
scripts/: apple-codesign.sh  apple-notarize.sh  setup.sh
scripts/linux/: cluvio-agent.service
scripts/macos/: apple-codesign.sh  apple-notarize.sh
sealed-boxes/: Cargo.toml
sealed-boxes/src/: lib.rs
setup/: Cargo.toml
setup/src/: config.rs  console.rs  constants.rs  dmg.rs  download.rs  error.rs  install.rs  main.rs  options.rs  update.rs  util.rs
util/: Cargo.toml
util/src/: base64.rs  crypto.rs  io.rs  lib.rs  serde.rs  time.rs
