[package]
name        = "cluvio-agent"
version     = "1.0.5"
license     = "MIT"
edition     = "2021"
description = "Cluvio GmbH connection agent"

[dependencies]
clap         = { version = "4.4.7", features = ["derive"] }
config       = { version = "0.13", default-features = false, features = ["toml"] }
directories  = "5.0.1"
either       = "1.7"
futures      = "0.3.28"
ipnet        = { version = "2.7", features = ["serde"] }
humantime    = "2.1"
log          = { version = "0.1.37", package = "tracing" }
minicbor-io  = { version = "0.15.0", features = ["async-io"] }
protocol     = { path = "../protocol" }
scopeguard   = "1.1.0"
sealed-boxes = { path = "../sealed-boxes" }
serde        = { version = "1.0.196", features = ["derive"] }
socket2      = { version = "0.5.4", features = ["all"] }
thiserror    = "1.0.50"
tokio-rustls = { version = "0.25", default-features = false, features = ["logging"] }
tokio-util   = { version = "0.7.10", features = ["compat"] }
util         = { path = "../util" }
webpki-roots = "0.25"
yamux        = "0.10.1"

[dependencies.tokio]
version          = "1.32"
default-features = false
features         = ["io-util", "macros", "net", "rt-multi-thread", "time", "sync"]

[dependencies.tracing-subscriber]
version  = "0.3.17"
features = ["env-filter", "json"]

[dev-dependencies]
quickcheck = "1.0.3"
rand       = "0.8.4"

# Debian archive metadata

[package.metadata.deb]
copyright          = "2023, Cluvio GmbH"
maintainer         = "Cluvio GmbH <admin@cluvio.com>"
maintainer-scripts = "../scripts/linux"

[package.metadata.deb.systemd-units]
start           = false
stop-on-upgrade = false

# RPM archive metadata

[package.metadata.generate-rpm]
post_install_script  = "systemctl enable cluvio-agent.service"
pre_uninstall_script = "systemctl disable cluvio-agent.service"
# requires = []

[[package.metadata.generate-rpm.assets]]
source = "target/release/cluvio-agent"
dest   = "/usr/bin/cluvio-agent"
mode   = "755"

[[package.metadata.generate-rpm.assets]]
source = "../scripts/linux/cluvio-agent.service"
dest   = "/lib/systemd/system/cluvio-agent.service"
mode   = "644"
config = true
