[package]
name    = "protocol"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
sealed-boxes  = { path = "../sealed-boxes" }
minicbor      = { version = "0.13.1", features = ["derive", "std", "half"] }
nohash-hasher = "0.2"
rand_core     = { version = "0.6.2", features = ["getrandom"] }
serde         = { version = "1.0.125", features = ["derive"] }
util          = { path = "../util" }

[dev-dependencies]
quickcheck = "1.0"
