[package]
name    = "sealed-boxes"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
blake2b_simd = "1.0.2"
crypto_box   = { version = "0.8.2", features = ["std"] }
minicbor     = { version = "0.19.1", features = ["derive", "std", "half"] }
rand_core    = { version = "0.6.4", features = ["getrandom"] }

[dev-dependencies]
quickcheck = "1.0"
