[package]
name    = "sealed-boxes"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
blake2b_simd = "1.0.3"
crypto_box   = { version = "0.9.1", features = ["std", "chacha20"] }
minicbor     = { version = "2.1", features = ["derive", "std", "half"] }
rand_core    = { version = "0.9.3", features = ["os_rng"] }

crypto_box_legacy = { package = "crypto_box", version = "0.8.2", features = ["std"] }

[dev-dependencies]
quickcheck = "1.0"
