[package]
name    = "util"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
base64         = "0.22.1"
humantime      = "2.1"
futures        = "0.3.28"
log            = { version = "0.1.37", package = "tracing" }
minicbor       = { version = "0.24.2", features = ["derive", "std", "half"] }
minicbor-io    = { version = "0.19.0", features = ["async-io"] }
rand_core      = "0.6.4"
rustls-pemfile = "2.1.2"
sealed-boxes   = { path = "../sealed-boxes" }
serde          = { version = "1.0.196", features = ["derive"] }
tokio-rustls   = "0.26"

[dependencies.chacha20poly1305]
version = "0.10"
