[package]
name    = "util"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
base64         = "0.22.1"
humantime      = "2.1"
futures        = "0.3.31"
log            = { version = "0.1.41", package = "tracing" }
minicbor       = { version = "0.26.4", features = ["derive", "std", "half"] }
minicbor-io    = { version = "0.21.0", features = ["async-io"] }
rand_core      = { version = "0.9.3", features = ["os_rng"] }
rustls-pemfile = "2.1.2"
sealed-boxes   = { path = "../sealed-boxes" }
serde          = { version = "1.0.219", features = ["derive"] }
tokio-rustls   = { version = "0.26", default-features = false }

[dependencies.chacha20poly1305]
version = "0.10"
